infra/kubernetes/overlays/testnet/ingress-gtcx-trade.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gtcx-api
  namespace: gtcx
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/success-codes: '200-499'
    alb.ingress.kubernetes.io/group.name: gtcx-api
spec:
  ingressClassName: alb
  rules:
    - host: api.gtcx.trade
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gtcx-protocols
                port:
                  number: 8300
    - host: testnet.gtcx.trade
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gtcx-protocols
                port:
                  number: 8300
